# subprojects

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/lib/: sum.cpp
cmake/: config_target.cmake  cxx_compiler_config.cmake  tools.cmake
